--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ addons:
 
 script:
   - grep blueberry fruit.txt
-  - "grep blueberry fruit.tx >> LOG"
+  - "git log --pretty=format:'Name:%cn %nHash:%H%nTimestamp=%ci' -n 1 >> LOG"
+  - "grep blueberry fruit.txt >> LOG"
   - "FILENAME=`basename $TRAVIS_REPO_SLUG`"
   - mv LOG ${TRAVIS_BUILD_DIR}/$FILENAME.log
 
